# conda-index

./: .authors.yml  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  HOW_WE_USE_GITHUB.md  LICENSE  Makefile  README.md  RELEASE.md  actual.xml  channeldata.profile  noxfile.py  pyproject.toml  rever_overrides.xsh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: canary-weekly.yml  pypi.yml  sphinx.yml  tests.yml
conda_index/: __init__.py  __main__.py  api.py  json2jlap.py  plugin.py  utils.py  utils_build.py  yaml.py
conda_index/_vendor/: constants.py  exceptions.py
conda_index/alchemy/: model.py  psqlcache.py
conda_index/cli/: __init__.py  json2jlap.py  main_index.py
conda_index/index/: __init__.py  __main__.py  cache.py  common.py  convert_cache.py  current_repodata.py  fs.py  logutil.py  model.py  package_streaming.py  psqlcache.py  rss.py  shards.py  shards_example.py  sqlitecache.py
conda_index/postgres/: cache.py  model.py
conda_index/templates/: subdir-index.html.j2
docs/: cache.md  cli.md  cli.rst  conf.py  database.md  fs.md  index.md  index_module.md  modules.md  postgresql.md  requirements.txt  theory_of_operation.md  v3-repodata.md
news/: 108-reindex-changed  110-run-exports  111-compact-json  119-optional-compact-json  125-jlap  126-less-itertools  129-check-size  132-remove-platform  139-no-current-repodata  143-complete-code-coverage  163-cache-run-exports  166-cache-mkdir-parents  177-remove-WAL  199-postgresql  201-gha-pypi  206-abstract-cache  208-additional-confilct-flag-options  218-html-dependencies-popup  219-postgresql-documentation  227-plugin-types  231-shards-version  232-cep-21-run-exports  234-compression-zstd  235-repodata-patch-callable.md  236-close-sqlite-connections  237-shards-created-at  240-postgres-separate-channels  244-reduce-conda-dependency  244-remove-locks  246-no-current-repodata  256-remove-locks  260-new-conda-package-streaming  262-type-checking  262-wheel  263-refactor-phases  269-store-missing-md5  273-remove-json2jlap  276-v3-repodata-docs.md  277-run-exports-json  280-remove-indexed-shards-2  (+24 more)
noarch/: index.html
recipe/: meta.yaml
shard-explorer/: AGENTS.md  PROJECT.md  index.html  server.py
tests/: compare_shards.py  compare_shards.sh  conftest.py  demonstrate_wheel.json  environment-db.yml  environment.yml  gen_patch.py  gen_patch_2.py  http_test_server.py  postgresql_fixture.py  split_repo.py  test_cache.py  test_cli.py  test_coverage.py  test_demonstrate_wheel.py  test_fsspec.py  test_groupby_strategies.py  test_index.py  test_json2jlap.py  test_plugin.py  test_psql.py  test_rss.py  test_sqlitecache.py  test_utils.py  test_vendored.py  utils.py
tests/archives/: conda-index-pkg-a-patch.py
tests/index_data/corrupt/: index.html
tests/index_data/corrupt/noarch/: index.html
tests/index_data/corrupt/noarch/.cache/: cache.db  stat.json
tests/index_data/legacy_cache/: README
tests/index_data/legacy_cache/.cache/: stat.json
tests/index_data/legacy_cache/.cache/about/: dummy-package-2.0-0.tar.bz2.json
tests/index_data/legacy_cache/.cache/index/: dummy-package-1.0-0.tar.bz2.json  dummy-package-2.0-0.tar.bz2.json
tests/index_data/legacy_cache/.cache/recipe/: dummy-package-1.0-0.tar.bz2.json  dummy-package-2.0-0.tar.bz2.json
tests/index_data/legacy_cache/.cache/run_exports/: dummy-package-2.0-0.tar.bz2.json
