[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conda_index"
authors = [
    { name = "Anaconda, Inc. & Contributors", email = "conda@continuum.io" },
]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >=8",
    "conda >=4.14.0",                  # not available on pypi
    "conda-package-streaming >=0.7.0",
    "filelock",
    "jinja2",
    "more-itertools",
    "ruamel.yaml",
    "zstandard",
]

[project.optional-dependencies]
test = [
    "conda-build >=3.21.0",
    "conda-package-handling >=1.9.0",
    "coverage[toml]",
    "pytest >=7",
    "pytest-cov",
    "pytest-mock",
    "fsspec[http]"
]
docs = [
    "furo",
    "sphinx",
    "sphinx-click",
    "myst-parser",
    "mdit-py-plugins>=0.3.0",
]

[project.scripts]
# conda-build also provides conda-index script.
# require python -m conda_index for the moment to avoid the conflict.

[project.entry-points.conda]
index = "conda_index.plugin"

[project.urls]
Home = "https://github.com/conda/conda-index"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
source = ["conda_index"]

[tool.isort]
profile = "black"
