[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >=1.12.2",
  "hatch-vcs >=0.2.0",
]

[project]
name = "conda_index"
authors = [
    { name = "Anaconda, Inc. & Contributors", email = "conda@continuum.io" },
]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >=8",
    # Disabled due to conda not being available on PyPI
    # "conda >=4.14.0",
    "conda-package-streaming >=0.7.0",
    "filelock",
    "jinja2",
    "msgpack",
    "ruamel.yaml",
    "zstandard",
]

[project.optional-dependencies]
test = [
    "conda-build >=3.21.0",
    "conda-package-handling >=1.9.0",
    "coverage[toml]",
    "pytest >=7",
    "pytest-cov",
    "pytest-mock",
    "fsspec[http]"
]
docs = [
    "furo",
    "sphinx",
    "sphinx-click",
    "myst-parser",
    "mdit-py-plugins>=0.3.0",
]

[project.scripts]
# conda-build also provides conda-index script.
# require python -m conda_index for the moment to avoid the conflict.

[project.entry-points.conda]
index = "conda_index.plugin"

[project.urls]
Home = "https://github.com/conda/conda-index"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = [
  # elevate conda's deprecated warning to an error
  "error::PendingDeprecationWarning:conda",
  "error::DeprecationWarning:conda",
  # elevate conda-build's deprecated warning to an error
  "error::PendingDeprecationWarning:conda_build",
  "error::DeprecationWarning:conda_build",
  # elevate conda-index's deprecated warning to an error
  "error::PendingDeprecationWarning:conda_index",
  "error::DeprecationWarning:conda_index",
]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
source = ["conda_index"]

[tool.isort]
profile = "black"

[tool.hatch.build]
include = ["conda_index"]

[tool.hatch.build.hooks.vcs]
version-file = "conda_index/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"
